--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,7 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/.claudiaideconfig
+/tailwind.config.js
+/pnpm-lock.yaml
+/package.json
